<resources>
    <string name="app_name">ManageClassApp</string>
    <string name="class_name">Class name</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="programming">Programming</string>
    <string name="networks_i">Networks I.</string>
    <string name="advanced_office">Advanced Office</string>
    <string name="title">Title</string>
    <string name="mark">Mark</string>
    <string name="save_2">Save</string>
    <string name="student_name">Student Name</string>
    <string name="mothers_name">Mothers name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="back">BACK</string>
    <string name="name">Name:</string>
    <string name="class_2">Class:</string>
    <string name="modify">MODIFY</string>
    <string name="modify_2">Modify</string>
    <string name="delete">Delete</string>
    <string name="delete_2">DELETE</string>
    <string name="back_2">Back</string>
    <string name="random_student">RANDOM STUDENT</string>
    <string name="add_class">Add Class</string>
    <string name="add_grade">Add Grade</string>
    <string name="add_student">Add Student</string>
    <string name="reset_database">Reset Database</string>
</resources>
