<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E6C9"
    tools:context=".ModifyClassActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="50dp"
        android:onClick="modify"
        android:text="@string/modify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectGroup" />

    <RadioGroup
        android:id="@+id/subjectGroup"
        android:layout_width="216dp"
        android:layout_height="96dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/className">

        <RadioButton
            android:id="@+id/rb_prog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/programming" />

        <RadioButton
            android:id="@+id/rb_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/networks_i" />

        <RadioButton
            android:id="@+id/rb_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_office" />
    </RadioGroup>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:onClick="delete"
        android:text="@string/delete_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectGroup" />

    <EditText
        android:id="@+id/className"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/class_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>